<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Relativelayout_main"
    tools:context=".activitys.ReadActivity">

    <FrameLayout
        android:id="@+id/read_widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:layerType="hardware" />

    <RelativeLayout
        android:id="@+id/read_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/reader_menu_bg_color">

        <TextView
            android:id="@+id/read_chapter_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/read_chapter_list_tv"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/read_pageview_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/read_pageview_tv"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/read_overlapped_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/read_overlapped_tv"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/theme_leather_bg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/read_chapter_list_tv"
            android:layout_margin="10dp"
            android:background="@drawable/theme_leather_bg" />

        <ImageView
            android:id="@+id/read_theme_green"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/read_chapter_list_tv"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/theme_leather_bg"
            android:background="@color/read_theme_green" />

        <TextView
            android:id="@+id/read_minfontsize__tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/theme_leather_bg"
            android:padding="15dp"
            android:text="@string/read_minfontsize__tv"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/theme_leather_bg"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="15"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/read_maxfontsize__tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/theme_leather_bg"
            android:padding="15dp"
            android:text="@string/read_maxfontsize__tv"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>