<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_base_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_take_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_photo_dialog_top"
            android:clickable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/dialog_bottom_photo_tv"
            android:textColor="@android:color/holo_blue_light" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFDD" />

        <TextView
            android:id="@+id/tv_choose_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_dialog_hint"
            android:clickable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/dialog_bottom_photo_check_tv"
            android:textColor="@android:color/holo_blue_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_base_bg">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_photo_dialog_bottom"
            android:clickable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/dialog_bottom_photo_cancel_tv"
            android:textColor="@android:color/holo_blue_light" />
    </LinearLayout>
</LinearLayout>