<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cuipengyu.solitarysoulbook.activitys.MainActivity">

    <include
        android:id="@+id/toolbar_common"
        layout="@layout/toolbar_common" />

    <LinearLayout
        android:id="@+id/main_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_fl_tab_lv"
        android:layout_below="@+id/toolbar_common"
        android:orientation="vertical" />
    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/main_fl_tab_lv"
        android:background="@color/light_black" />

    <LinearLayout
        android:id="@+id/main_fl_tab_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <!--书架-->
        <RelativeLayout
            android:id="@+id/bookshelf_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="5dp">

            <ImageView
                android:id="@+id/bookshelf_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:src="@drawable/main_bookshelf_iv" />

            <TextView
                android:id="@+id/bookshelf_message_count_tv"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_alignEnd="@+id/bookshelf_iv"
                android:background="@drawable/main_tab_message_bg"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/bookshelf_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bookshelf_iv"
                android:layout_centerHorizontal="true"
                android:text="@string/main_bookshelf_tv"
                android:textColor="@drawable/main_color_tv" />
        </RelativeLayout>
        <!--书城-->
        <RelativeLayout
            android:id="@+id/book_city_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="5dp">

            <ImageView
                android:id="@+id/book_city_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:src="@drawable/main_book_city_iv_bg" />

            <TextView
                android:id="@+id/book_city_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_city_iv"
                android:layout_centerHorizontal="true"
                android:text="@string/main_book_city_tv"
                android:textColor="@drawable/main_color_tv" />
        </RelativeLayout>
        <!--设置-->
        <RelativeLayout
            android:id="@+id/my_setting_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="5dp">

            <ImageView
                android:id="@+id/my_setting_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:src="@drawable/main_setting_iv_bg" />

            <TextView
                android:id="@+id/my_setting_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_setting_iv"
                android:layout_centerHorizontal="true"
                android:text="@string/main_setting_tv"
                android:textColor="@drawable/main_color_tv" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
